# mpc_solver_comparison

./: CMakeLists.txt  package.xml  readme.md
mpc_acado/: CMakeLists.txt  package.xml
mpc_acado/script/: plot.py
mpc_acado/src/: acado.cpp  main.cpp  snopt.cpp
script/: plot.py  plot_snopt_fail.py
src/: acado.cpp  ceres.cpp  ipopt.cpp  params.h  ros_test.cpp  snopt.cpp  snopt_example.cpp  snopt_fail.txt
